[gd_scene load_steps=7 format=3 uid="uid://cnm78mbfj50em"]

[ext_resource type="Script" path="res://Scripts/ServerManager.cs" id="1_7mj4o"]
[ext_resource type="Script" path="res://Scripts/server_name.gd" id="2_oy5qm"]
[ext_resource type="Script" path="res://Scripts/server_button_handeler.gd" id="2_wlat8"]
[ext_resource type="Script" path="res://Scripts/custom_commands_watcher.gd" id="3_7rlco"]
[ext_resource type="Script" path="res://Scripts/server_log.gd" id="4_uhfxh"]
[ext_resource type="Script" path="res://Scripts/server_input.gd" id="5_78ww4"]

[node name="Server GUI" type="VBoxContainer"]
custom_minimum_size = Vector2(340, 0)
size_flags_horizontal = 3

[node name="Server Manager" type="Node" parent="."]
script = ExtResource("1_7mj4o")

[node name="Server Button Handeler" type="Node" parent="."]
script = ExtResource("2_wlat8")

[node name="Custom Commands Watcher" type="Node" parent="."]
script = ExtResource("3_7rlco")

[node name="Server Name" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_oy5qm")

[node name="Server Controls Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="Server Controls HBox" type="HBoxContainer" parent="Server Controls Center"]
layout_mode = 2

[node name="Start Button" type="Button" parent="Server Controls Center/Server Controls HBox"]
layout_mode = 2
text = "Start"

[node name="Stop Button" type="Button" parent="Server Controls Center/Server Controls HBox"]
layout_mode = 2
text = "Stop"

[node name="Force Stop Button" type="Button" parent="Server Controls Center/Server Controls HBox"]
layout_mode = 2
text = "Force Stop"

[node name="World Controls Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="World Controls HBox" type="HBoxContainer" parent="World Controls Center"]
layout_mode = 2

[node name="Reset Button" type="Button" parent="World Controls Center/World Controls HBox"]
layout_mode = 2
text = "Reset Run"

[node name="Delete World Button" type="Button" parent="World Controls Center/World Controls HBox"]
layout_mode = 2
text = "Delete World"

[node name="Save Run Button" type="Button" parent="World Controls Center/World Controls HBox"]
layout_mode = 2
text = "Save Run"

[node name="Indicators Center" type="CenterContainer" parent="."]
visible = false
layout_mode = 2

[node name="Indicators HBox" type="HBoxContainer" parent="Indicators Center"]
layout_mode = 2

[node name="Server Indicator" type="Button" parent="Indicators Center/Indicators HBox"]
layout_mode = 2
button_mask = 0
text = "Server Stopped"

[node name="World Indicator" type="Button" parent="Indicators Center/Indicators HBox"]
layout_mode = 2
button_mask = 0
text = "World Does Not Exist"

[node name="Server Log" type="TextEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Latest Server Log Will Appear Here"
editable = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
highlight_all_occurrences = true
scroll_smooth = true
script = ExtResource("4_uhfxh")

[node name="Server Input" type="LineEdit" parent="."]
layout_mode = 2
script = ExtResource("5_78ww4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "r"
fit_content = true

[connection signal="pressed" from="Server Controls Center/Server Controls HBox/Start Button" to="Server Button Handeler" method="_on_start_button_pressed"]
[connection signal="pressed" from="Server Controls Center/Server Controls HBox/Stop Button" to="Server Button Handeler" method="_on_stop_button_pressed"]
[connection signal="pressed" from="Server Controls Center/Server Controls HBox/Force Stop Button" to="Server Button Handeler" method="_on_force_stop_button_pressed"]
[connection signal="pressed" from="World Controls Center/World Controls HBox/Reset Button" to="Server Button Handeler" method="_on_reset_button_pressed"]
[connection signal="pressed" from="World Controls Center/World Controls HBox/Delete World Button" to="Server Button Handeler" method="_on_delete_world_button_pressed"]
[connection signal="pressed" from="World Controls Center/World Controls HBox/Save Run Button" to="Server Button Handeler" method="_on_save_run_button_pressed"]
[connection signal="text_changed" from="Server Log" to="Server Log" method="_on_text_changed"]
[connection signal="text_set" from="Server Log" to="Server Log" method="_on_text_set"]
[connection signal="text_submitted" from="Server Input" to="Server Input" method="_on_text_submitted"]
